some style fixes:
scrollbar, field label checkbox

--- a/src/common.scss
+++ b/src/common.scss
@@ -9,6 +9,7 @@ $transparentDark: rgb(38, 48, 61, 0.5);
 $success: #38D400;
 $error: red;
 
+$accessibility: rgb(0, 128, 255);
 
 $breakpoints: (
     tablet: 1024px,
