--- a/src/components/common/form/Form.module.scss
+++ b/src/components/common/form/Form.module.scss
@@ -55,6 +55,7 @@ $padding_x_small: map-get($paddings, "x_small");
                 word-break: break-word;
                 margin-top: 0.6rem;
                 font-size: 0.9rem;
+                display: inline;
             }
         }
     }
